2008-12-21  Andrew Pinski  <pinskia@gmail.com>

	PR target/38300
	* configure: Regenerate.

2008-12-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips-dsp.md (mips_lbux): Turn into a define_expand,
	changing operand 1 to a pmode_register_operand.
	(mips_lhx, mips_lwx): Likewise.
	(mips_lbux_<mode>, mips_lhx_<mode>, mips_lwx_<mode>): New patterns.
	* config/mips/mips.c (mips_prepare_builtin_arg): Get the mode of
	the value from the argument expression.

2008-12-21  Jan Hubicka  <jh@suse.cz>
	    Kai Tietz <kai.tietz@onevision.com>

	* i376.md (UNSPEC_MS_TO_SYSV_CALL): New constant.
	(call_1_rex64_ms_sysv, call_value_0_rex64_ms_sysv,
	call_value_1_rex64_ms_sysv): New patterns.
	* i386.c (function_arg_ms_64): Pass magical value of -2 as callarg.
	(ix86_expand_call): Emit extra clobbers for ms->sysv ABI calls.

2008-12-21  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_pad_noreturn): New static function.
	(alpha_reorg): Call alpha_pad_noreturn.

2008-12-21  Denis Chertykov  <denisc@overta.ru>

	* config/avr/avr.md ("andsi3"): Fix wrong cc attribute.

2008-12-20  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/37610
	* configure.ac (gcc_cv_as_cfi_advance_working): Fall back to 'no'
	if readelf is nowhere to be found.
	* configure: Regenerate.

2008-12-19  Andrew Haley  <aph@redhat.com>

	* builtins.c, tree-ssa-loop-ivopts.c, fixed-value.c:
	Fix comments.

2008-12-19  Richard Earnshaw  <rearnsha@arm.com>

	PR target/38548
	* arm/t-linux (LIB1ASMFUNCS): Add _arm_addsubdf3 and _arm_addsubsf3.
	* arm/lib1funcs.asm (clzsi2): Use RET macro for return instruction.

2008-12-19  Richard Earnshaw  <rearnsha@arm.com>

	PR bootstrap/38578
	* arm.c (load_multiple_sequence): Initialize ORDER array.
	(store_multiple_sequence): Likewise.
	(output_move_double): Make reg0 unsigned.
	(arm_output_epilogue): Make amount unsigned.
	(arm_expand_prologue): Move declaration of dwarf before block
	statements.

2008-12-19  Steve Ellcey  <sje@cup.hp.com>
