@@ -393,8 +393,8 @@
 2008-12-18  Daniel Kraft  <d@domob.eu>
 
 	PR fortran/31822
-	* gfortran.dg/char_pointer_assign_2.f90: Updated expected error message
-	to be more detailed.
+	* gfortran.dg/char_pointer_assign_2.f90: Updated expected error
+	message to be more detailed.
 	* gfortran.dg/char_pointer_assign_4.f90: New test.
 	* gfortran.dg/char_pointer_assign_5.f90: New test.
 
