@@ -1,3 +1,11 @@
+2008-12-22  Uros Bizjak  <ubizjak@gmail.com>
+
+	* config/alpha/alpha.h (ASM_OUTPUT_EXTERNAL): New macro.
+
+	PR target/34571
+	* config/alpha/predicates.md (symbolic_operand): Return 1 for a
+	label_ref with an offset.
+
 2008-12-21  Andrew Pinski  <pinskia@gmail.com>
 
 	PR target/38300
@@ -99,8 +107,8 @@
 	(df_scan_start_dump, df_get_call_refs, df_hard_reg_init): Rename
 	df_invalidated_by_call to invalidated_by_call_regset.
 	* df.h (df_invalidated_by_call): Remove.
-	* regclass.c (regs_invalidated_by_call_regset, persistent_obstack): New
-	variables.
+	* regclass.c (regs_invalidated_by_call_regset, persistent_obstack):
+	New variables.
 	(init_reg_sets_1): Initialize regs_invalidated_by_call_regset.
 	(globalize_reg): Likewise.
 	* df-problems.c (df_rd_local_compute, df_lr_confluence_n,
@@ -116,8 +124,8 @@
 2008-12-18  Jan Hubicka  <jh@suse.cz>
 	    Kai Tietz <kai.tietz@onevision.com>
 
-	* i386.h (CONDITIONAL_REGISTER_USAGE): Initialize for current function
-	ABI.
+	* i386.h (CONDITIONAL_REGISTER_USAGE): Initialize for current
+	function ABI.
 	* i386.c (ix86_call_abi_override): Do not trigger target re-init and
 	do not try to modify call used regs.
 	(ix86_maybe_switch_abi): New function.
